--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ header {
 
 main {
     height: calc(100vh - 70px);
-    overflow: scroll;
 }
 
 .barra_ricerca {
@@ -18,7 +17,6 @@ main {
 .ms_bg1 {
     background-color: brown;
     height: 70px;
-    width: 100%;
     border: dashed 5px white;
 }
 
@@ -29,7 +27,21 @@ main {
 
 /* fine debug */
 
-.main_container {
-    width: 50%;
-    background-color: red;
+.ms_content {
+    width: 100%;
+    overflow: scroll;
+}
+
+
+
+@media screen and (min-width: 576px) {
+
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 992px) {
+
 }
