--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ main {
     height: calc(100vh - 70px);
 }
 
+.logo_exchange {
+    width: 70px;
+}
 .barra_ricerca {
     height: calc(100vh - 70px);
     background-color: black;
@@ -25,20 +28,38 @@ main {
     width: 100%;
 }
 
+#ms_faq {
+    height: 300px;
+    background-color: orange;
+}
 /* fine debug */
 
 .ms_content {
     width: 100%;
     overflow: scroll;
 }
+.ms_logo_b {
+    display: none;
+}
 
-
+.ms_search_bar {
+    width: 90%;
+}
 
 @media screen and (min-width: 576px) {
 
 }
 
 @media screen and (min-width: 768px) {
+    .ms_logo_m {
+        display: none;
+    }
+    .ms_logo_b {
+        display: inline-block;
+    }
+    .logo_exchange {
+        width: 200px;
+    }
     .divider {
         display: flex;
         flex: wrap;
