--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,15 @@ main {
     display: none;
 }
 
-.ms_search_bar {
-    width: 90%;
+.ms_disp_none {
+    display: none;
 }
 
+
+
+.ms_color_white {
+    color: white;
+}
 @media screen and (min-width: 576px) {
 
 }
@@ -59,6 +64,13 @@ main {
     }
     .logo_exchange {
         width: 200px;
+    }
+    .ms_disp_none {
+        display: inline-block;
+        padding-left: 10px;
+    }
+    .barra_ricerca {
+        width: 120px;
     }
     .divider {
         display: flex;
