--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
+:root {
+    --ms_bg_search: #e4e4e5;
+    --orange_bell: #fd8b2e;
+}
+
+#ms_bg_search {
+    background-color: var(--ms_bg_search);
+}
+
+
+#ms_bg_search_2 {
+    background-color: var(--ms_bg_search);
+}
+
+
+.ms_color_bell {
+    color: var(--orange_bell);
+}
+
+
+.ms_color_bell::-ms-expand {
+    display: none;
+}
+
+.ms_width_list {
+    height: 50px;
+    padding-top: 0;
+    line-height: 50px;
+}
 header {
     height: 70px;
 }
@@ -43,6 +72,7 @@ main {
 }
 .ms_logo_b {
     display: none;
+    width: 100px;
 }
 
 .ms_disp_none {
