--- a/css/style.css
+++ b/css/style.css
@@ -123,11 +123,12 @@ th:first-child {
 }
 @media screen and (min-width: 576px) {
     .ms_table_display {
-        display: inline-block;
+        display: table-cell;
     }
 }
 
 @media screen and (min-width: 768px) {
+    
     .ms_logo_m {
         display: none;
     }
@@ -157,11 +158,12 @@ th:first-child {
     .ms_right_sec {
         width: 35%;
     }
-    .ms_table_display_2 {
-        display: inline-block;
-    }
+    
 }
 
 @media screen and (min-width: 992px) {
+    .ms_table_display_2 {
+        display: table-cell;
+    }
 
 }
